[package]
name = "json_plus"
description = "JSON helper functions beyond Serialization & Deserialization"
version = "0.1.0"
authors = ["Dean Karn <dean.karn@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-playground/json-plus"
categories = []
keywords = ["json", "diff", "merge", "helpers"]

[[bench]]
name = "bench"
harness = false

[dependencies]
enumflags2 = "0.7.1"
serde_json = "1.0.70"

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }

[lib]
bench = false
